--- a/ansible/playbooks/roles/modelInference/tasks/main.yml
+++ b/ansible/playbooks/roles/modelInference/tasks/main.yml
@@ -66,6 +66,7 @@
 ##############################################################
 #                      IMPORTANT: FIXED
 ##############################################################
+# the following checks if enough deployment pods exist. fails after 30*5 seconds
 
 - name: Wait for deployment to report ready replicas
   kubernetes.core.k8s_info:
